Fix disgusting and not working code